--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -230,6 +230,10 @@ footer a {
     margin-left: 10px;
 }
 
+footer p {
+    color: #ffffff;
+}
+
 /* Responsive Design */
 @media screen and (max-width: 768px) {
     /* Adjust navigation menu */
