--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,5 @@
 /* Base Styles */
+/*
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
@@ -279,3 +280,4 @@ footer p {
         margin-bottom: 20px;
     }
 }
+*/
